@@ -1,3 +1,7 @@
+2004-09-15  Joel Brobecker  <brobecker@gnat.com>
+
+	* gdb.base/bigcore.exp: Deactivate on IRIX targets.
+
 2004-09-14  Michael Chastain  <mec.gnu@mindspring.com>
 
 	* gdb.threads/killed.c: Include <stdlib.h>.
